# guix-development-templates-workshop

./: .gitattributes  .gitignore  README.md
.github/workflows/: c++.yml
c++/: .clang-format  .clang-tidy  .gdbinit  CMakeLists.txt
c++/devops/: README.md  channels.scm  library.scm  manifest.scm  package.scm
c++/source/: CMakeLists.txt  main.cpp
c++/toolchain/: clang  gcc
